--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-torch
-torchvision
+torch>=1.13
+torchvision>=0.14
 matplotlib
 numpy
 pandas
 scikit-learn
 scipy
-tqdm      
+tqdm
 ipykernel>=6.0
 Pillow
-
